<resources>
    <string name="app_name">Laundry Schedule</string>
    <string name="action_settings">Settings</string>
    <string name="action_addUser">Add User</string>
    <string name="title_activity_user_list">Userlist</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_user">Usermanagement</string>
    <string name="title_activity_lsmain">Laundry Schedule</string>
    <string name="title_activity_location">LocationActivity</string>
    <string name="title_activity_machine">Machines</string>

    <string name="log_out">Log out</string>
    <string name="success">Success</string>

    <string name="progress_downloading">Downloading…</string>
    <string name="progress_uploading">Uploading…</string>
    <string name="progress_auth">Signing In…</string>

    <string name="upload_success">Upload finished</string>
    <string name="upload_failure">Upload failed</string>\

    <string name="download_success">Download finished</string>
    <string name="download_failure">Download failure</string>

    <!-- Strings related to login -->
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_reservation">ReservationActivity</string>
    <string name="add_reservation">Add Reservation</string>

    <string name="reservations">Reservations</string>
    <string name="login">Login</string>
    <string name="management">Management</string>
    <string name="locations">Locations</string>
    <string name="washing_machines">Washing machines</string>
    <string name="users">Users</string>
    <string name="timer">Timer</string>
    <string name="timerTitle">TIMER.</string>
    <string name="timer00">00:00</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="reset">Reset</string>
    <string name="timer_finished">Your machine is done</string>
    <string name="timer_finished_text">Get your clean clothes</string>
    <string name="update_user">Update User</string>
    <string name="user_success">User successfully saved</string>
    <string name="update_location">Update Location</string>
    <string name="set">Set</string>
    <string name="minutes">Minutes</string>
    <string name="positive_number">Please enter a positive number</string>
    <string name="request_minutes">Please input minutes</string>
</resources>
